# technojaw-app

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: build-and-release.yml  build-windows.yml
assets/: README.md  gen_icon.py  technojaw-icon.icns
electron/: main.js  preload.js
electron/services/: keychain.js
scripts/: README.md  generate-icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
