[package]
name = "technojaw-app"
version = "1.3.9"
description = "TechnoJaw — Online Self Shine (Desktop App)"
authors = ["TechnoJaw"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
